--- a/portfolio.css
+++ b/portfolio.css
@@ -1,13 +1,12 @@
 /* stylesheet for whole portfolio */
 
 body {
-	background-color: 
+	background-color: FFFFCC; 
 }
 
 h1 {
 	font-family: Georgia;
 	font-size: 30px
-	color: blue;
 	text-align: center;
 }
 
@@ -15,23 +14,19 @@ h2 {
 	font-family: Georgia;
 	font-size: 20px;
 	color: blue;
-	margin-left: 10%;
+	margin-left: 5%;
 }
 
 p {
 	font-family: Georgia;
 	font-size: 15px;
 	color: black;
-	margin-left: 15%;
+	margin-left: 10%;
 }
 
 ul {
 	font-family: Georgia;
-	font-size: 10px;
+	font-size: 12px;
 	color: black;
-	margin-left: 20%
-}
-
-img {
-	text-align: center;
+	margin-left: 15%
 }
