--- a/portfolio.css
+++ b/portfolio.css
@@ -6,7 +6,7 @@ body {
 
 h1 {
 	font-family: Georgia;
-	font-size: 30px
+	font-size: 30px;
 	text-align: center;
 }
 
@@ -28,5 +28,5 @@ ul {
 	font-family: Georgia;
 	font-size: 12px;
 	color: black;
-	margin-left: 15%
+	margin-left: 15%;
 }
