--- a/portfolio.css
+++ b/portfolio.css
@@ -10,6 +10,17 @@ h1 {
 	text-align: center;
 }
 
+.img {
+
+    background-image: url('http://lorempixel.com/200/200/city/9');
+    position:absolute;
+    top:0;
+    left:0;
+    width: 100%;
+    height:100%;
+
+}
+
 #blurred_img {
 
     -webkit-filter: blur(20px);
@@ -39,8 +50,4 @@ ul {
 	font-size: 12px;
 	color: black;
 	margin-left: 15%;
-}
-
-img {
-	vertical-align: center;
 }
