trying to stack the images

--- a/portfolio.css
+++ b/portfolio.css
@@ -12,7 +12,7 @@ h1 {
 
 .img {
 
-    position:absolute;
+/*    position:absolute;*/
     top:0;
     left:0;
     width: 100%;
@@ -27,6 +27,12 @@ h1 {
     -o-filter: blur(20px);
     -ms-filter: blur(20px);
     filter: blur(20px);
+
+}
+
+#main_img {
+
+	  z-index: 1;
 
 }
 
